# pipecat-local-stt-server

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: integration.md  migration.md  operations.md  protocol.md
docs/dev_plans/: 20260530-refactor-debrand-runtime-surface.md  20260605-nemotron-asr-backend.md  20260607-feature-stt-agents-justfile.md  20260607-feature-stt-prompt-biasing.md  20260626-feature-uds-trust-boundary-hardening.md  README.md
scripts/: _mlx_spike_driver.py  _smoke_lib.py  benchmark_asr_ab.py  install_stt_agent.sh  mlx_teardown_spike.sh  render_stt_plist.py  smoke_peercred.py  smoke_test_parakeet.py  verify_peercred_crossuid.py
shared/: env.py  text_quality.py
stt_server/: README.md  __init__.py  __main__.py  _peercred.py  backend.py  client.py  env.py  protocol.py  server.py  text_quality.py
stt_server/backends/: __init__.py  _thread_util.py  mlx_whisper.py  nemotron.py  parakeet.py
stt_server/examples/: file_stream.py  pipecat_stt_service.py
tests/: test_backend_missing_extra.py  test_backend_protocol.py  test_benchmark_asr_ab.py  test_env_helpers.py  test_install_migration.py  test_justfile_recipes.py  test_mlx_teardown_spike.py  test_mlx_whisper_backend.py  test_nemotron_backend.py  test_parakeet_backend.py  test_peercred.py  test_protocol_version.py  test_render_stt_plist.py  test_stt_post_filter.py  test_stt_server.py  test_wire_schema_compat.py
tests/snapshots/: koda-stt.plist  pipecat-stt.plist
