[project]
name = "pipecat-local-stt-server"
version = "0.3.1"
description = "Standalone local WebSocket transcription (STT) server, client, and pluggable ASR backends for the Pipecat ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Varun Singh", email = "varun@varunsingh.net" }]
keywords = ["stt", "transcription", "whisper", "parakeet", "mlx", "websocket", "pipecat", "asr", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # The wire transport. The client (TranscriptionClient) and the server
    # runtime (TranscriptionServer) both depend on websockets; it is the only
    # hard runtime dependency of the base package. Backend ASR engines live
    # behind the [mlx] / [parakeet] extras so a client-only consumer (e.g. a
    # bot that just talks to a running server) does not pull MLX/Whisper.
    "websockets>=13.0",
]

[project.optional-dependencies]
# Pure client deps — what a downstream consumer of `stt_server.client` needs
# without pulling any MLX/Whisper runtime.
client = ["websockets>=13.0"]
# Full server install with the MLX Whisper backend.
mlx = ["websockets>=13.0", "mlx-whisper>=0.4.0", "numpy>=1.26"]
# Full server install with the Parakeet TDT backend (via parakeet-mlx).
parakeet = ["websockets>=13.0", "parakeet-mlx>=0.5.1", "numpy>=1.26"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    # Test infrastructure: backend tests synthesise PCM16LE audio with numpy.
    # Lives in the always-synced dev group (not per-backend groups/extras) so
    # the suite runs without an ASR runtime extra installed.
    "numpy>=1.26",
]
# Nemotron 3.5 ASR backend runtime, git-pinned to the PR #774 merge commit
# (Blaizzy/mlx-audio#774, merged 2026-06-05) because no PyPI mlx-audio release
# yet contains Nemotron STT support — the latest, 0.4.3, was cut 2026-04-28,
# before #774 landed. This lives in a [dependency-groups] dev group rather than
# [project.optional-dependencies] on purpose: PEP 735 groups are NOT emitted
# into wheel/sdist Requires-Dist, whereas a direct-URL (PEP 508 ``@ <url>``)
# dependency in a published extra is rejected by PyPI. Keeping it here lets
# `uv sync --group nemotron` install the backend locally while 0.3.0 stays
# PyPI-installable. Promote to a clean ``nemotron`` extra with a version pin once
# mlx-audio publishes a release containing #774 (tracked follow-up).
nemotron = [
    # numpy is pulled transitively by mlx-audio at runtime; it is declared in
    # the dev group for the test suite, so it is intentionally not repeated here.
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@14add666b5313cadff94a231ee11979f6ac1adf7",
]

[project.urls]
Homepage = "https://github.com/vr000m/pipecat-local-stt-server"
Repository = "https://github.com/vr000m/pipecat-local-stt-server"
Issues = "https://github.com/vr000m/pipecat-local-stt-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Import name stays `stt_server` so every `import stt_server` callsite, every
# test, and the plist `python -m stt_server` invocation work without rename.
packages = ["stt_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# `tests/test_benchmark_asr_ab.py` does `from scripts.benchmark_asr_ab import …`
# and `tests/test_mlx_teardown_spike.py` imports `scripts/_mlx_spike_driver.py`,
# so the repo root must be importable under pytest.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
